fix(hubble): enforce scoped write boundaries
- require GraphSpace write access for Loader and query mutations
- authorize global Ingest changes through their owning GraphSpace
- apply GraphSpace and graph predicates to final update/delete SQL
- push visible Ingest filtering and pagination into database queries